FIX image-align to center

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -18,3 +18,9 @@
     margin-left: auto;
     margin-right: 20px;
 }
+
+.section div[class*="col-"] img.image-align-center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
